# rust-todo-cli

./: Cargo.toml  README.md
scripts/: batch_insert.sh
src/: command.rs  main.rs  models.rs  repositories.rs  utils.rs
src/models/: action.rs  category.rs  order_by_enum.rs  task.rs  task_status_enum.rs
src/repositories/: action_repository.rs  category_repository.rs  task_repository.rs
