[package]
name = "todo-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
time = { version = "0.3.36" }
rusqlite = { version = "0.31.0", features = ["bundled", "time"]  }
anyhow = { version = "1.0" }
sea-query = { version = "0.30.7", features = ["attr", "derive", "with-time"] }